makes gameinfo look nice on mobile. fixes box shadow for player whos turn it is. generally organizes mobile game tab moves "play again" to bet box. fixes desktop card misalignment. still need to design protected pescado deck. still need to make font smaller on tiny screens. still need to align cards on tablet screens. still need to show credits symbol in action. still need to make credits symbol match font color.

--- a/client/static/modern.css
+++ b/client/static/modern.css
@@ -20,7 +20,7 @@
     background-size: cover;
     background-blend-mode: multiply;
     color: #ffffff;
-    grid-row: 1/3;
+    grid-area: 1/1/3/2;
     font-size: 1rem;
 }
 
@@ -39,6 +39,15 @@
     width: calc(100% - 6px);
     height: auto;
     aspect-ratio: 50 / 67;
+    grid-area: 1/3/2/4;
+}
+
+#discard{
+    display: block;
+    width: calc(100% - 6px);
+    height: auto;
+    aspect-ratio: 50 / 67;
+    grid-area: 1/4/2/5;
 }
 
 .smol
@@ -98,14 +107,10 @@ h5.protected{
     grid-area: 1/2/3/3;
 }
 
-#pAgainBtn{
-    grid-column: 2/3;
-}
-
 .dieContainer{
     display: block;
     width: 100%;
-    grid-column: 3/5;
+    grid-area: 2/3/3/5;
 }
 
 .die{
@@ -163,13 +168,13 @@ h5.protected{
 #gameInfo{
     position: absolute;
     top: 50%;
-    translate: 0px -33%;
+    translate: 0px -50%;
     z-index: 4;
     width: 30%;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 2fr 2fr 1fr 1fr;
-    grid-template-rows: 3fr 1fr 2fr;
+    grid-template-rows: 3fr 1fr;
     justify-items: center;
     align-items: center;
 }
@@ -240,13 +245,6 @@ h5.protected{
     font-size: 30px;
 }
 
-#discard{
-    display: block;
-    width: calc(100% - 6px);
-    height: auto;
-    aspect-ratio: 50 / 67;
-}
-
 .playerBox{
     padding: 0px 10px;
     font-size: 1rem;
@@ -283,7 +281,7 @@ h5.protected{
 }
 
 .player2{
-    bottom: 73%;
+    bottom: 74%;
     left: 2%;
     translate: -100% 0%;
 }
@@ -291,12 +289,12 @@ h5.protected{
 .player2 > .cardsContainer{
     rotate: 302deg;
     top: 130px;
-    left: calc(100% + 64px);
+    left: calc(100% + 53px);
     translate: -50% -50%;
 }
 
 .player3{
-    bottom: 100%;
+    bottom: 103%;
     left: 36%;
     translate: -50% 0%;
 }
@@ -309,7 +307,7 @@ h5.protected{
 }
 
 .player4{
-    bottom: 100%;
+    bottom: 103%;
     left: 64%;
     translate: -50% 0%;
 }
@@ -322,8 +320,8 @@ h5.protected{
 }
 
 .player5{
-    bottom: 73%;
-    right: 3%;
+    bottom: 74%;
+    right: 2%;
     translate: 100% 0%;
 }
 
@@ -470,31 +468,68 @@ h5.protected{
         position: fixed;
         top: unset;
         font-size: 1.5rem;
-        bottom: 25%;
-        right: 31%;
-        translate: 50% 0%;
+        bottom: 27%;
+        right: 30%;
+        max-width: 60%;
+        max-height: 6%;
+        translate: 50% 50%;
     }
 
     #gameInfo{
         position: fixed;
         top: unset;
-        bottom: 15%;
-        right: 6%;
+        bottom: 16.5%;
+        right: 30%;
         width: 50%;
-        translate: 0% 50%;
+        max-height: 15%;
+        translate: 50% 50%;
+        grid-template-columns: 2fr 2fr 2fr 1fr;
+        grid-template-rows: 1fr 3fr;
     }
 
     #pots{
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
         font-size: 0.9rem;
+        grid-area: 1/1/2/5;
+    }
+
+    #pots h5{
+        margin-bottom: 0px;
+    }
+
+    .alderaan{
+        width: 90%;
+        grid-area: 2/1/3/2;
+    }
+
+    #deck{
+        grid-area: 2/2/3/3;
+    }
+
+    #discard{
+        grid-area: 2/3/3/4;
+    }
+
+    .dieContainer{
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        grid-area: 2/4/3/5;
+    }
+
+    .die{
+        width: calc(100% - 9px);
     }
 
     #actBox{
         position: fixed;
         top: unset;
-        bottom: 7%;
-        right: 4%;
+        bottom: 4.5%;
+        right: 30%;
         width: 50%;
-        translate: 0% 50%;
+        max-height: 9%;
+        translate: 50% 50%;
     }
 
     .chip, .imperial-credits-logo{
@@ -504,11 +539,16 @@ h5.protected{
     .player0{
         position: fixed;
         z-index: 4;
-        width: 30%;
         top: unset;
-        bottom: 15vh;
-        left: 5%;
-        translate: 0% 50%;
+        bottom: 15%;
+        left: 20%;
+        width: 35%;
+        height: 26%;
+        translate: -50% 50%;
+    }
+
+    .player0 > .playerBox{
+        height: 100%;
     }
 
     .player0 h5{
