--- a/client/static/styles.css
+++ b/client/static/styles.css
@@ -249,7 +249,7 @@ main img
 
 .backBlue.turnGlow{
   background-color: rgb(14, 148, 201);
-  box-shadow: 0px 0px 25px 10px rgba(255,255,0,1);
+  box-shadow: 0px 0px 2px 2px rgba(255,255,0,1);
 }
 
 .backBlue.brightBlue{
@@ -262,7 +262,7 @@ main img
 
 .backRed.turnGlow{
   background-color: #ed3b3b;
-  box-shadow: 0px 0px 25px 10px rgba(255,255,0,1);
+  box-shadow: 0px 0px 2px 2px rgba(255,255,0,1);
 }
 
 .chip
